# templates

./: .gitignore  README.md  flake.nix
c-exec/: flake.nix
c-exec/exec-name/: CMakeLists.txt  default.nix  devshell.nix
c-exec/exec-name/include/exec-name/: sample.h
c-exec/exec-name/src/: main.c
c-exec/nix/modules/: checks.nix  devshells.nix
c-exec/nix/tools/: include-what-you-use.nix
c-lib/: .clang-format  flake.nix  overlay.nix
c-lib/lib-name/: .clang-tidy  CMakeLists.txt
c-lib/lib-name/cmake/: Config.cmake.in
c-lib/lib-name/include/lib-name/: sample.h
c-lib/lib-name/src/: sample.c
c-lib/nix/modules/: checks.nix  nixpkgs.nix
c-lib/nix/tools/: c-check.nix  clang-tidy.nix
c-lib/test/unit/lib-name/: CMakeLists.txt  default.nix  devshell.nix
c-lib/test/unit/lib-name/src/: sample_test.c
cpp-exec/: .clang-format  .clang-tidy  .gitignore  apps.nix  devshells.nix  flake.nix  overlay.nix  packages.nix
cpp-exec-addition/exec-name/: .clang-tidy  CMakeLists.txt  default.nix
cpp-exec-addition/exec-name/include/exec-name/: sample.h
cpp-exec/exec-name/: CMakeLists.txt  default.nix  devshell.nix
cpp-exec/exec-name/cmake/: Config.cmake.in
cpp-exec/exec-name/cpp-check-results/: cppcheck_report.xml
cpp-exec/exec-name/cpp-check-results/html_report/: index.html  stats.html
cpp-exec/exec-name/include/exec-name/: sample.h
cpp-exec/exec-name/src/: main.cc
cpp-exec/nix/: apps.nix  checks.nix  devshells.nix  lib.nix  packages.nix
cpp-exec/nix/devshell/: base.nix  inputs.nix
cpp-exec/nix/modules/: apps.nix  checks.nix  formatting.nix  packages.nix
cpp-exec/nix/static-analysis/: clang-tidy.nix  cpp-check.nix
cpp-exec/nix/tools/: cpp-check.nix
cpp-lib/: .clang-tidy  .gitignore  apps.nix  clang-format.nix  devshell.nix  devshells.nix  flake.nix  lib.nix  overlay.nix  package.nix  packages.nix  run-clang-format.sh  run-clang-tidy.sh
cpp-lib-addition/lib-name/: CMakeLists.txt  default.nix  devshell.nix
cpp-lib-addition/lib-name/include/lib-name/: sample.h
cpp-lib-addition/lib-name/src/: sample.cc
cpp-lib-addition/test/unit/lib-name/: CMakeLists.txt
cpp-lib/lib-name/: .clang-tidy  CMakeLists.txt  default.nix  devenv.nix  devshell.nix  lib-nameConfig.cmake
cpp-lib/lib-name/include/lib-name/: sample.h
cpp-lib/lib-name/src/: sample.cc
cpp-lib/lib-name/static-analysis/: clang-tidy.nix  cpp-check.nix
cpp-lib/nix/: apps.nix  checks.nix  devshells.nix  lib.nix  packages.nix
cpp-lib/nix/devshell/: base.nix  inputs.nix
cpp-lib/nix/fmt/: treefmt.nix
cpp-lib/nix/modules/: apps.nix  checks.nix  devshells.nix  nixpkgs.nix  packages.nix
cpp-lib/nix/static-analysis/: clang-tidy.nix  cpp-check.nix
cpp-lib/nix/tools/: clang-format.nix  clang-tidy.nix  cpp-check.nix  include-what-you-use.nix
cpp-lib/test/unit/lib-name/: CMakeLists.txt  default.nix  devenv.nix  devshell.nix
cpp-lib/test/unit/lib-name/src/: sample_test.cc
cpp_lib/: .gitignore  flake.nix
cpp_lib/lib_name/: CMakeLists.txt  default.nix
cpp_lib/lib_name/src/: sample.cc
cpp_lib/test/unit/lib_name/: CMakeLists.txt  default.nix
cpp_lib/test/unit/lib_name/src/: sample_test.cc
rust-cargo-crate/: .gitignore  CLAUDE.md  Cargo.toml  deny.toml  flake.nix  overlay.nix
rust-cargo-crate/nix/modules/: crane.nix  nixpkgs.nix  overlays.nix  packages.nix
rust-cargo-crate/src/: main.rs
rust-cargo-workspace/: CLAUDE.md  Cargo.toml  STYLE_GUIDE.md  apps.nix  deny.toml  devshells.nix  flake.nix  overlay.nix  packages.nix
rust-cargo-workspace/crates/exec-name/: Cargo.toml
rust-cargo-workspace/crates/exec-name/src/: main.rs
rust-cargo-workspace/crates/exec_name/: Cargo.toml
rust-cargo-workspace/crates/lib-name/: Cargo.toml
rust-cargo-workspace/crates/lib-name/src/: lib.rs
rust-cargo-workspace/crates/lib_name/: Cargo.toml
rust-cargo-workspace/nix/: apps.nix  devshells.nix  lib.nix  packages.nix  treefmt.nix
rust-cargo-workspace/nix/modules/: checks.nix  default.nix  devshells.nix  formatting.nix  packages.nix
zig-exec/: .gitignore  flake.nix  overlay.nix
zig-exec/exec-name/: build.zig  build.zig.zon  default.nix  devshell.nix
zig-exec/exec-name/src/: main.zig
zig-exec/nix/modules/: apps.nix  devshells.nix  formatting.nix  packages.nix
zig-lib/: flake.nix  overlay.nix
zig-lib/lib-name/: build.zig  build.zig.zon  default.nix  devshell.nix
zig-lib/lib-name/src/: root.zig
zig-lib/nix/: checks.nix  devshells.nix  lib.nix  packages.nix
zig-lib/nix/fmt/: treefmt.nix
zig-lib/nix/modules/: checks.nix  devshells.nix  nixpkgs.nix  packages.nix
